--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
                 <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="#skills" class="nav-link">Skills</a>
-            </li>
-            <li class="nav-item">
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
+            <li class="nav-item">
+                <a href="#skills" class="nav-link">Skills</a>
+            </li>
+
 <!--            TODO: add testims -->
 <!--            <li class="nav-item">-->
 <!--                <a href="#testimonials" class="nav-link">Testimonials</a>-->
@@ -95,8 +96,8 @@
                         <span class="title-cursor">|</span>
                     </div>
                     <p class="hero-description">
-                        A self-taught developer with an intense curiosity for how technology works beneath the surface.
-                        I specialize in cybersecurity, frontend development, and turning complex problems into elegant solutions.
+                        A self-taught developer with curiosity for how technology works beneath the surface.
+                        I spend my time learning cybersecurity, frontend development, and problem-solving.
                     </p>
 
                     <div class="hero-stats">
@@ -195,16 +196,16 @@
                         <p>
                             I'm a self-taught, highly motivated high school student with an intense curiosity for how technology
                             works beneath the surface. From when I was 10, I've been building a hands-on foundation in computer forensics, networking, system
-                            configuration, programming, brand design, and creative problem-solving.
+                            configuration, programming, brand design, and problem-solving.
                         </p>
                         <p>
-                            I treat my computer like a lab, constantly breaking, fixing, and customizing the devices I use daily.
+                            I treat my computer like a lab by breaking, fixing, and customizing the devices I use daily.
                             I've developed real skills not from classes, but from figuring things out when everything should've broken.
                         </p>
                         <p>
                             My approach is simple: <strong>Break it. Fix it. Learn from it.</strong> This philosophy has led me to start
-                            mastering multiple operating systems, configuring complex development environments, and working towards creating solutions that
-                            actually work in the real world.
+                            mastering multiple operating systems, configuring complex development environments, and working towards creating applications that
+                            actually work in real use cases.
                         </p>
                     </div>
 
@@ -229,15 +230,15 @@
                             </li>
                             <li>
                                 <i class="fas fa-code" aria-hidden="true"></i>
-                                Writing and debugging code in Python, Java, HTML/CSS/JS, Bash, C#, and more
+                                Writing and debugging code in HTML/CSS/JS, Java, Python, Swift, C#, and more
                             </li>
                             <li>
                                 <i class="fas fa-tools" aria-hidden="true"></i>
-                                Building projects from scratch without hand-holding
+                                Building projects from scratch
                             </li>
                             <li>
                                 <i class="fas fa-video" aria-hidden="true"></i>
-                                Creating educational content for YouTube using DaVinci Resolve and Capcut
+                                Creating educational content for YouTube
                             </li>
                         </ul>
                     </div>
@@ -322,8 +323,7 @@
                         <h3>Ingredient Insight</h3>
                         <p>
                             A recipe planning app that generates personalized meal plans based on dietary
-                            preferences and available ingredients. Built with modern web technologies and a focus on
-                            user experience.
+                            preferences and available ingredients.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">HTML/CSS/JS</span>
@@ -415,8 +415,7 @@
                         <h3>"How Tf?" YouTube Channel</h3>
                         <p>
                             Educational short-form videos breaking down complex topics with engaging,
-                            informative content. Features stick-figure mascots and expressive editing
-                            to make knowledge more accessible for everyone.
+                            informative content. Features stick-figure mascots.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">DaVinci Resolve</span>
@@ -452,7 +451,6 @@
                         <h3>Web Design Business</h3>
                         <p>
                             Designing functional and clean websites for friends, family, and small businesses.
-                            Focus on performance optimization, user experience, and modern web standards.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">HTML/CSS/JS</span>
@@ -555,92 +553,92 @@
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">JavaScript</span>
-                                <span class="skill-level">Advanced</span>
+<!--                                <span class="skill-level">5 yr</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="95"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="95"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">Java</span>
-                                <span class="skill-level">Skilled</span>
+<!--                                <span class="skill-level">Skilled</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="80"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="80"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">Python</span>
-                                <span class="skill-level">Intermediate</span>
+<!--                                <span class="skill-level">Intermediate</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="65"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="65"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">C#</span>
-                                <span class="skill-level">Intermediate</span>
+<!--                                <span class="skill-level">Intermediate</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="62"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="62"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">Bash</span>
-                                <span class="skill-level">Advanced</span>
+<!--                                <span class="skill-level">Advanced</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="85"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="85"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">HTML</span>
-                                <span class="skill-level">Advanced</span>
+<!--                                <span class="skill-level">Advanced</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="95"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="95"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">CSS</span>
-                                <span class="skill-level">Advanced</span>
+<!--                                <span class="skill-level">Advanced</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="95"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="95"></div>-->
+<!--                            </div>-->
                         </div>
-                        <div class="skill-item">
-                            <div class="skill-info">
-                                <span class="skill-name">Zsh</span>
-                                <span class="skill-level">Intermediate</span>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="60"></div>
-                            </div>
-                        </div>
+<!--                        <div class="skill-item">-->
+<!--                            <div class="skill-info">-->
+<!--                                <span class="skill-name">Zsh</span>-->
+<!--                                <span class="skill-level">Intermediate</span>-->
+<!--                            </div>-->
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="60"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">Swift</span>
-                                <span class="skill-level">Intermediate</span>
+<!--                                <span class="skill-level">Intermediate</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="50"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="50"></div>-->
+<!--                            </div>-->
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
                                 <span class="skill-name">Lua</span>
-                                <span class="skill-level">Beginner</span>
+<!--                                <span class="skill-level">Beginner</span>-->
                             </div>
-                            <div class="skill-bar">
-                                <div class="skill-progress" data-width="30"></div>
-                            </div>
+<!--                            <div class="skill-bar">-->
+<!--                                <div class="skill-progress" data-width="30"></div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -657,24 +655,12 @@
                             <span>Nmap</span>
                         </div>
                         <div class="tool-item">
-                            <i class="fas fa-key" aria-hidden="true"></i>
-                            <span>Hydra</span>
-                        </div>
-                        <div class="tool-item">
                             <i class="fas fa-network-wired" aria-hidden="true"></i>
                             <span>Wireshark</span>
                         </div>
                         <div class="tool-item">
                             <i class="fas fa-bug" aria-hidden="true"></i>
                             <span>Burp Suite</span>
-                        </div>
-                        <div class="tool-item">
-                            <i class="fas fa-terminal" aria-hidden="true"></i>
-                            <span>Metasploit</span>
-                        </div>
-                        <div class="tool-item">
-                            <i class="fas fa-eye" aria-hidden="true"></i>
-                            <span>Ettercap</span>
                         </div>
                         <div class="tool-item">
                             <i class="fas fa-eye" aria-hidden="true"></i>
@@ -693,17 +679,9 @@
                             <span>Hashcat</span>
                         </div>
                         <div class="tool-item">
-                            <i class="fas fa-list" aria-hidden="true"></i>
-                            <span>SEToolkit</span>
-                        </div>
-                        <div class="tool-item">
                             <i class="fas fa-terminal" aria-hidden="true"></i>
                             <span>Empire</span>
                         </div>
-<!--                        <div class="tool-item">-->
-<!--                            <i class="fas fa-terminal" aria-hidden="true"></i>-->
-<!--                            <span>CrackMapExec</span>-->
-<!--                        </div>-->
                         <div class="tool-item">
                             <i class="fas fa-dragon" aria-hidden="true"></i>
                             <span>Ghidra</span>
@@ -715,14 +693,6 @@
                         <div class="tool-item">
                             <i class="fas fa-search" aria-hidden="true"></i>
                             <span>Blueranger</span>
-                        </div>
-                        <div class="tool-item">
-                            <i class="fas fa-file" aria-hidden="true"></i>
-                            <span>unetbootin</span>
-                        </div>
-                        <div class="tool-item">
-                            <i class="fas fa-file" aria-hidden="true"></i>
-                            <span>Etcher</span>
                         </div>
                     </div>
                 </div>
@@ -736,7 +706,7 @@
                     <div class="os-grid">
                         <div class="os-item">
                             <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Sequoia</span>
+                            <span>macOS</span>
                         </div>
                         <div class="os-item">
                             <i class="fab fa-linux" aria-hidden="true"></i>
@@ -744,47 +714,11 @@
                         </div>
                         <div class="os-item">
                             <i class="fab fa-windows" aria-hidden="true"></i>
-                            <span>Windows 10</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-windows" aria-hidden="true"></i>
-                            <span>Windows 11</span>
+                            <span>Windows</span>
                         </div>
                         <div class="os-item">
                             <i class="fas fa-cube" aria-hidden="true"></i>
                             <span>VMware Fusion</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-windows" aria-hidden="true"></i>
-                            <span>Windows 7</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS High Sierra</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Mojave</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Catalina</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Big Sur</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Monterey</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Ventura</span>
-                        </div>
-                        <div class="os-item">
-                            <i class="fab fa-apple" aria-hidden="true"></i>
-                            <span>macOS Sonoma</span>
                         </div>
                     </div>
                 </div>
