--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         <div class="project-badge">Featured</div>
                         <h3>Web Design Business</h3>
                         <p>
-                            Designing functional and clean websites for friends, family, and small businesses.
+                            Designing functional and clean websites for family, friends, and small businesses.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">HTML/CSS/JS</span>
