removed linkedin; made inquiry form use mailto due to outage; removed some error with comm links; fixed form button alignment

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <p class="hero-description">
                         A self-taught developer with curiosity for how technology works beneath the surface.
-                        I spend my time learning cybersecurity, frontend development, and problem-solving.
+                        I spend my time learning cybersecurity, frontend development, graphic design, and app development.
                     </p>
 
                     <div class="hero-stats">
@@ -130,9 +130,9 @@
                         <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile">
                             <i class="fab fa-github" aria-hidden="true"></i>
                         </a>
-                        <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
-                            <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        </a>
+<!--                        <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">-->
+<!--                            <i class="fab fa-linkedin" aria-hidden="true"></i>-->
+<!--                        </a>-->
                         <a href="https://youtube.com/@howtfdoes_work" target="_blank" rel="noopener noreferrer" aria-label="YouTube Channel">
                             <i class="fab fa-youtube" aria-hidden="true"></i>
                         </a>
@@ -294,9 +294,9 @@
         <div class="container">
             <div class="section-header">
                 <h2>Featured Projects</h2>
-                <p class="section-subtitle">
-                    Real-world solutions built from curiosity and determination
-                </p>
+<!--                <p class="section-subtitle">-->
+<!--                    Real-world solutions built from curiosity and determination-->
+<!--                </p>-->
             </div>
 
             <div class="projects-grid">
@@ -677,12 +677,12 @@
                         </div>
                         <div class="tool-item">
                             <i class="fas fa-terminal" aria-hidden="true"></i>
-                            <span>Empire</span>
+                            <span>Recon-ng</span>
                         </div>
-                        <div class="tool-item">
-                            <i class="fas fa-dragon" aria-hidden="true"></i>
-                            <span>Ghidra</span>
-                        </div>
+<!--                        <div class="tool-item">-->
+<!--                            <i class="fas fa-dragon" aria-hidden="true"></i>-->
+<!--                            <span>Ghidra</span>-->
+<!--                        </div>-->
                         <div class="tool-item">
                             <i class="fas fa-file-zipper" aria-hidden="true"></i>
                             <span>apktool</span>
@@ -950,7 +950,7 @@
                     <h3>Get In Touch</h3>
                     <p>
                         I'm always interested in new opportunities, collaborations, and challenging projects.
-                        Whether you need a website, cybersecurity consultation, or just want to chat about technology,
+                        Whether you need a website, tech consultation, or just want to chat about technology,
                         I'd love to hear from you.
                     </p>
 
@@ -966,16 +966,16 @@
                             </div>
                         </div>
 
-                        <div class="contact-method">
-                            <div class="contact-icon">
-                                <i class="fab fa-linkedin" aria-hidden="true"></i>
-                            </div>
-                            <div class="contact-details">
-                                <h4>LinkedIn</h4>
-                                <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer">Connect with me</a>
-                                <p>Professional networking</p>
-                            </div>
-                        </div>
+<!--                        <div class="contact-method">-->
+<!--                            <div class="contact-icon">-->
+<!--                                <i class="fab fa-linkedin" aria-hidden="true"></i>-->
+<!--                            </div>-->
+<!--                            <div class="contact-details">-->
+<!--                                <h4>LinkedIn</h4>-->
+<!--                                <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer">Connect with me</a>-->
+<!--                                <p>Professional networking</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
                         <div class="contact-method">
                             <div class="contact-icon">
@@ -1003,7 +1003,8 @@
                 </div>
 
                 <div class="contact-form-container">
-                    <form action="https://formsubmit.co/aasoni.dev@gmail.com" class="contact-form" id="contactForm" method="POST">
+<!--                    action="https://formsubmit.co/aasoni.dev@gmail.com"-->
+                    <form class="contact-form" id="contactForm">
 
 <!--                        <input type="hidden" name="apikey" value="b7acc05f-4597-4ad6-8584-b6a40c21b23d">-->
 <!--                        <input type="hidden" name="access_key" value="b7acc05f-4597-4ad6-8584-b6a40c21b23d">-->
@@ -1088,9 +1089,9 @@
                     <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                         <i class="fab fa-github" aria-hidden="true"></i>
                     </a>
-                    <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    </a>
+<!--                    <a href="https://linkedin.com/in/aasoni" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">-->
+<!--                        <i class="fab fa-linkedin" aria-hidden="true"></i>-->
+<!--                    </a>-->
                     <a href="https://youtube.com/@howtfdoes_work" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
                         <i class="fab fa-youtube" aria-hidden="true"></i>
                     </a>
