--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <!-- SEO Meta Tags -->
     <title>Aaryan Soni | Full-Stack Developer & Cybersecurity Enthusiast</title>
-    <meta name="description" content="16-year-old self-taught developer specializing in cybersecurity, web development, and system configuration. Building innovative solutions and breaking things to learn how they work.">
+    <meta name="title" content="Aaryan Soni | Full-Stack Developer & Cybersecurity Enthusiast">
+    <meta name="description" content="17-year-old self-taught developer specializing in cybersecurity, web development, and system configuration. Building innovative solutions and breaking things to learn how they work.">
     <meta name="keywords" content="cybersecurity, web development, penetration testing, full-stack developer, python, javascript, kali linux">
     <meta name="author" content="Aaryan Soni">
 
@@ -15,6 +16,7 @@
     <meta property="og:description" content="Self-taught developer with expertise in cybersecurity, web development, and system configuration">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aaryan-soni.web.app/">
+    <meta name="google-site-verification" content="iTDkkwh5dljRrud-quB5frQUdYHbe7mHwcHmfLhq5M4" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>">
