visual tweaks including animations and scroll snapping

--- a/index.html
+++ b/index.html
@@ -88,36 +88,36 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-greeting">Hello, I'm</span>
-                    <h1 class="hero-title">
+                    <span class="hero-greeting animate-fade-in-up">Hello, I'm</span>
+                    <h1 class="hero-title animate-fade-in-up">
                         Aaryan Soni
 
                     </h1>
-                    <div class="hero-subtitle">
+                    <div class="hero-subtitle animate-fade-in-up delay-1">
                         <span class="typing-text" id="typingText"></span>
                         <span class="title-cursor">|</span>
                     </div>
-                    <p class="hero-description">
+                    <p class="hero-description animate-fade-in-up delay-2">
                         A self-taught developer with curiosity for how technology works beneath the surface.
                         I spend my time learning cybersecurity, frontend development, graphic design, and app development.
                     </p>
 
                     <div class="hero-stats">
-                        <div class="stat">
+                        <div class="stat animate-fade-in-up delay-5">
                             <span class="stat-number" data-target="10">0</span>
                             <span class="stat-label">Projects Built</span>
                         </div>
-                        <div class="stat">
+                        <div class="stat animate-fade-in-up delay-6">
                             <span class="stat-number" data-target="5">0</span>
                             <span class="stat-label">Programming Languages</span>
                         </div>
-                        <div class="stat">
+                        <div class="stat animate-fade-in-up delay-7">
                             <span class="stat-number" data-target="6">0</span>
                             <span class="stat-label">Years Experience</span>
                         </div>
                     </div>
 
-                    <div class="hero-actions">
+                    <div class="hero-actions animate-fade-in-up delay-8">
                         <a href="#projects" class="cta-btn primary large">
                             <i class="fas fa-code" aria-hidden="true"></i>
                             View My Work
@@ -128,7 +128,7 @@
                         </a>
                     </div>
 
-                    <div class="social-links">
+                    <div class="social-links animate-fade-in-up delay-9">
                         <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile">
                             <i class="fab fa-github" aria-hidden="true"></i>
                         </a>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="hero-visual">
+                <div class="hero-visual animate-fade-in-up delay-10">
                     <div class="terminal-window">
                         <div class="terminal-header">
                             <div class="terminal-buttons">
@@ -152,25 +152,25 @@
                                 <span class="btn-minimize"></span>
                                 <span class="btn-maximize"></span>
                             </div>
-                            <div class="terminal-title">aaryansoni@macbook:~</div>
+                            <div class="terminal-title animate-fade-in-up delay-10">aaryansoni@macbook:~</div>
                         </div>
                         <div class="terminal-body">
-                            <div class="terminal-line">
+                            <div class="terminal-line animate-fade-in-up delay-11">
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="command">whoami</span>
                             </div>
-                            <div class="terminal-line output">Frontend Developer, Gamer & Pen Testing Enthusiast</div>
-                            <div class="terminal-line">
+                            <div class="terminal-line output animate-fade-in-up delay-12">Frontend Developer, Gamer & Pen Testing Enthusiast</div>
+                            <div class="terminal-line animate-fade-in-up delay-13">
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="command">ls ./skills</span>
                             </div>
-                            <div class="terminal-line output">JavaScript Python Java C# Swift Bash Cybersecurity Webdev UI UX</div>
-                            <div class="terminal-line">
+                            <div class="terminal-line output animate-fade-in-up delay-14">JavaScript Python Java C# Swift Bash Cybersecurity Webdev UI UX</div>
+                            <div class="terminal-line animate-fade-in-up delay-15">
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="command">cat motto.txt</span>
                             </div>
-                            <div class="terminal-line output">Break it. Fix it. Learn from it.</div>
-                            <div class="terminal-line">
+                            <div class="terminal-line output animate-fade-in-up delay-16">Break it. Fix it. Learn from it.</div>
+                            <div class="terminal-line animate-fade-in-up delay-17">
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="cursor-blink">_</span>
                             </div>
@@ -1146,7 +1146,7 @@
 
         <div class="footer-bottom">
 <!--            <a href="https://creativecommons.org">Untitled</a> © 1999 by <a href="https://creativecommons.org">Jane Doe</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
-            <p>&copy; 2025 Aaryan Soni. <a style="color: lightblue" href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
+            <p>&copy; 2026 Aaryan Soni. <a style="color: lightblue" href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
 <!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
 <!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
 <!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
